<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jobtracker.TrackerActivity" >

    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_account"/>
    <item
        android:id="@+id/action_password"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_password"/>
    <item
        android:id="@+id/action_saved"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_saved"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>