<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jobtracker.JobActivity" >

    <LinearLayout
        android:id="@+id/mainDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/jobTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/companyName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/pay"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/empType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/empType"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/jobDetails"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/mainDetails"
        android:layout_alignStart="@+id/mainDetails"
        android:layout_below="@+id/mainDetails"
        android:layout_marginTop="34dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/skills"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/jobDesContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/jobDescription" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/jobDetails" >

        <ImageView
            android:id="@+id/checkWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/checkJobWeb"
            android:src="@drawable/location_web_site" />

        <ImageView
            android:id="@+id/shareFriends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/suggestFriend"
            android:src="@drawable/social_share" />

        <ImageView
            android:id="@+id/saveJobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/saveJobs"
            android:src="@drawable/rating_not_important" />
    </LinearLayout>

</RelativeLayout>