<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jobtracker.SettingActivity" >

    <TextView
        android:id="@+id/myAccountTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_account_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myAccountTitleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" 
        android:id="@+id/passwordLayout">

        <TextView
            android:id="@+id/changePasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/myAccountTitleText"
            android:layout_marginBottom="36dp"
            android:text="@string/change_password_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editNewPassword"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:hint="@string/edit_confirm_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="@string/save_button" />

</RelativeLayout>