<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homework5.SignUpActivity" >

    <EditText
        android:id="@+id/signupTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

       <EditText
        android:id="@+id/signupTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email" android:inputType="textEmailAddress">

    </EditText>
       
    <EditText
        android:id="@+id/signupTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signupTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSignup"
        android:layout_alignStart="@+id/buttonSignup"
        android:layout_below="@+id/buttonSignup"
        android:text="@string/cancel" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCancel"
        android:layout_alignStart="@+id/buttonCancel"
        android:layout_below="@+id/buttonCancel"
        android:layout_marginTop="66dp" >
    </com.google.android.gms.common.SignInButton>

</RelativeLayout>
